--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>lu.evenge</groupId>
     <artifactId>sudoku</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
     <build>
         <plugins>
 
